error handling on every fetch